Done. App working

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -47,6 +47,6 @@
         android:layout_centerHorizontal="true"
         android:background="@drawable/roundedbutton"
         android:padding="10dp"
-        android:backgroundTint="@color/colorPrimary"
+        android:backgroundTint="@color/btnRed"
         android:textColor="#FFF"/>
 </RelativeLayout>
