--- a/app/src/main/res/layout/content_main_menu.xml
+++ b/app/src/main/res/layout/content_main_menu.xml
@@ -46,7 +46,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="41dp"
-        android:id="@+id/btn_login"
+        android:id="@+id/btn_logout"
         android:background="@drawable/roundedbutton"
         android:backgroundTint="@color/colorPrimary"
         android:textColor="#FFF"
