--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#c62828</color>
+    <color name="colorPrimary">#ff0000</color>
     <color name="colorPrimaryDark">#b71c1c</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="btnRed">#FF0000</color>
 </resources>
