--- a/app/src/main/res/layout/activity_add_location.xml
+++ b/app/src/main/res/layout/activity_add_location.xml
@@ -39,7 +39,7 @@
         android:lines="5" />
 
     <Button
-        android:text="Button"
+        android:text="@string/btn_send"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/txt_particularities"
